# safegrad

./: .gitignore  Cargo.toml  README.md  graph.dot  sin_network_graph.dot  xor_network_graph.dot
src/: engine.rs  lib.rs  main.rs  mlp.rs
