[package]
name = "safegrad"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of micrograd - a tiny autograd engine"
authors = ["Şüheda Kozan <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/contextua1/safegrad"
license = "MIT"

[dependencies]
petgraph = "0.6"
dot = "0.1"
